[project]
name = "test_coverage"
version = "0.1.0"
description = "A utility package for finding and processing test_*.py files for coverage analysis."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

dependencies = [
    "pytest",
    "coverage"
]

[project.urls]
Homepage = "https://your-homepage-url.com"

[tool.setuptools]
packages = ["test_coverage"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 